styles for contact, some fixes for overflow; fixed descr; added icon for background color;

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -143,7 +143,20 @@ header {
 
 input {
     padding: 5px 10px;
+    
 }
+
+// MODAL STYLES ----------
+
+input[class="form-control"] {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.modal-footer {
+    &>button {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+}
+// -------------
 
 textarea {
     padding: 5px 10px;
@@ -304,7 +317,7 @@ footer{
     padding: 33px 65px;
 
     box-shadow: 0px 0px 33px 6px rgba(34, 60, 80, 0.19);
-    min-height: 550px;
+    min-height: 650px;
     background-color: #f4f4f4;
     background-image: linear-gradient(90deg, #f4f4f4 0%, #ffffff 100%);
     border-radius: 10px;
@@ -370,10 +383,17 @@ footer{
         }
         
         &>.container {
+            position: relative;
             padding: 0;
             background-color: #cccccc;
             box-shadow: $main-shadow;
+        }
 
+        .bck-change-color {
+            position: absolute;
+            right: 5px;
+            top: 5px;
+            cursor: pointer;
         }
 
         &_info {
@@ -406,18 +426,13 @@ footer{
                             top: 50%;
                             right: 3px;
                             transform: translateY(-50%) rotate(0deg) scale(0.6);
+                            transition: all 0.2s ease;
                         }
                     }
                     &_collapse-block {
-                        
-
                         background-color: $text-color-base;
                         border-radius: 0 0 10px 10px;
                         box-shadow: $main-shadow;
-
-                        translate: all 0.2s ease-in;
-
-
                         ul {
                             padding-left: 0;
                             list-style-type: none;
@@ -431,12 +446,26 @@ footer{
                             }
 
                             .contact-name {
-                                font-size: 24px;
+                                font-size: 28px;
                                 font-weight: 900;
+                                overflow-x: auto;
+
                             }
 
                             .contact-link {
                                 font-weight: 400;
+                                font-size: 18px;
+                                overflow-x: auto;
+                            }
+                        }
+
+                        &_add-contact {
+                            padding: 10px 0;
+                            @include addIconHover;
+                            cursor: pointer;
+                            img {
+                                margin: 0 auto;
+                                display: block;
                             }
                         }
                     }
@@ -461,15 +490,28 @@ footer{
                 }
 
                 &_descr{ 
+                    position: relative;
+
                     max-width: 100%;
                     border: 1px solid #000;
-                    padding: 10px;
+                    padding: 10px 20px;
                     margin-top: 20px;
+                    min-height: 50px;
+                    max-height: 450px;
+                    overflow-y: auto;
                     font-size: 22px;
                     background-color: #fff;
+                    white-space: pre;
 
                     p {
                         margin: 0;
+                    }
+
+                    img {
+                        position: absolute;
+                        cursor: pointer;
+                        right: 5px;
+                        top: 5px;
                     }
                 }
             }
@@ -534,6 +576,5 @@ footer{
             }
         }
     }
-
-    
 }
+
